main – First benchmarks